# udevadm_monitor

./: CMakeLists.txt  README.md  package.xml  setup.py
msg/: Event.msg
scripts/: monitor_usb.py
